[workspace]
resolver = "2"
members = ["src/core"]

[workspace.dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
web-sys = { version = "0.3.99", features = [
    "HtmlSelectElement",
    "HtmlDocument",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "DomRect",
    "Element",
] }
gloo = "0.12.0"
rand = "0.8.6"
wasm-bindgen-test = "0.3.72"

[profile.release]
strip = true
