[package]
name = "detaxine-charts"
version = "0.8.20"
edition = "2024"
description = "A data visualization library for Leptos"
license = "MIT OR Apache-2.0"
license-file = "../../LICENSE-APACHE"
repository = "https://github.com/elonaire/detaxine-charts"
homepage = "https://elonaire.github.io/detaxine-charts/"
documentation = "https://docs.rs/detaxine-charts"
readme = "../../README.md"
keywords = ["leptos", "charts", "wasm", "visualization", "data"]
categories = ["web-programming", "visualization"]

[features]
default = [
    "BarChart",
    "PieChart",
    "DoughnutChart",
    "LineCurveChart",
    "CandlestickChart",
]
BarChart = []
PieChart = []
DoughnutChart = []
LineCurveChart = []
CandlestickChart = []

[dependencies]
leptos = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.docs.rs]
no-deps = true
